tests/ui/view-types/must-restrict.stderr
error: expected parameter name, found `{`
  --> $DIR/must-restrict.rs:11:11
   |
LL | fn f(_: S.{}.{ foo }) {}
   |           ^ expected parameter name

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `.`
  --> $DIR/must-restrict.rs:11:10
   |
LL | fn f(_: S.{}.{ foo }) {}
   |          ^
   |          |
   |          expected one of 7 possible tokens
   |          help: missing `,`

error: expected parameter name, found `{`
  --> $DIR/must-restrict.rs:12:11
   |
LL | fn g(_: S.{ foo }.{ bar }) {}
   |           ^ expected parameter name

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `.`
  --> $DIR/must-restrict.rs:12:10
   |
LL | fn g(_: S.{ foo }.{ bar }) {}
   |          ^
   |          |
   |          expected one of 7 possible tokens
   |          help: missing `,`

error: expected parameter name, found `{`
  --> $DIR/must-restrict.rs:13:11
   |
LL | fn h(_: S.{ foo }.{}.{ foo }) {}
   |           ^ expected parameter name

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `.`
  --> $DIR/must-restrict.rs:13:10
   |
LL | fn h(_: S.{ foo }.{}.{ foo }) {}
   |          ^
   |          |
   |          expected one of 7 possible tokens
   |          help: missing `,`

error: aborting due to 6 previous errors

